// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <input
        className="d b c e f g h i j k l m n o p q r s"
    />
    <div
        className="d b c t u v w n x p y"
    >
        error
    </div>
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{display:inline}
    .e{border-bottom-width:0}
    .f{border-left-width:0}
    .g{border-right-width:0}
    .h{border-top-width:0}
    .i{padding-bottom:0}
    .j{padding-left:0}
    .k{padding-right:0}
    .l{padding-top:0}
    .m{color:black}
    .n{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .o{font-size:16}
    .p{line-height:24px}
    .q::placeholder{color:rgba(0, 0, 0, 0.5)}
    .r{background-color:transparent}
    .s{outline:none}
    .t{color:red}
    .u{white-space:pre-wrap}
    .v{overflow-wrap:break-word}
    .w{-ms-hyphens:auto}
    .x{font-size:14}
    .y{font-weight:600}",
}
`;

exports[`label 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <div
        className="d b c e f g h i j k l"
    >
        label
    </div>
    <input
        className="d b c m n o p q r s t e i u k v w x"
    />
    <div
        className="d b c y f g h i j k l"
    >
         
    </div>
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{display:inline}
    .e{color:black}
    .f{white-space:pre-wrap}
    .g{overflow-wrap:break-word}
    .h{-ms-hyphens:auto}
    .i{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .j{font-size:14}
    .k{line-height:24px}
    .l{font-weight:600}
    .m{border-bottom-width:0}
    .n{border-left-width:0}
    .o{border-right-width:0}
    .p{border-top-width:0}
    .q{padding-bottom:0}
    .r{padding-left:0}
    .s{padding-right:0}
    .t{padding-top:0}
    .u{font-size:16}
    .v::placeholder{color:rgba(0, 0, 0, 0.5)}
    .w{background-color:transparent}
    .x{outline:none}
    .y{color:red}",
}
`;

exports[`render 1`] = `
Object {
  "component": <div
    className="a b c"
>
    <input
        className="d b c e f g h i j k l m n o p q r s"
    />
    <div
        className="d b c t u v w n x p y"
    >
         
    </div>
</div>,
  "fela": "
    .a{display:flex}
    .b{flex-direction:column}
    .c{position:relative}
    .d{display:inline}
    .e{border-bottom-width:0}
    .f{border-left-width:0}
    .g{border-right-width:0}
    .h{border-top-width:0}
    .i{padding-bottom:0}
    .j{padding-left:0}
    .k{padding-right:0}
    .l{padding-top:0}
    .m{color:black}
    .n{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .o{font-size:16}
    .p{line-height:24px}
    .q::placeholder{color:rgba(0, 0, 0, 0.5)}
    .r{background-color:transparent}
    .s{outline:none}
    .t{color:red}
    .u{white-space:pre-wrap}
    .v{overflow-wrap:break-word}
    .w{-ms-hyphens:auto}
    .x{font-size:14}
    .y{font-weight:600}",
}
`;
